--- a/directive/playlist/playlist.html
+++ b/directive/playlist/playlist.html
@@ -3,12 +3,28 @@
         <a href="audio/Dr.Vamp - dark society.mp3">Dr.Vamp - dark society.mp3</a>
     </li> -->
     <li>
-        <a class="track" href="audio/Dr.Vamp - west-side.mp3">Dr.Vamp - west-side.mp3</a></li>
-    <li><a class="track" href="audio/Dr.Vamp - dark society.mp3">Dr.Vamp - dark society.mp3</a></li>
-    <li><a class="track" href="audio/Dr.Vamp - dark angels.mp3">Dr.Vamp - dark angels.mp3</a></li>
+        <a class="track" href="audio/Dr.Vamp - west-side.mp3">Dr.Vamp - west-side.mp3</a>
+        <!-- <span class="track-img"></span>         -->
+    </li>
+
+    <li>
+        <a class="track" href="audio/Dr.Vamp - dark society.mp3">Dr.Vamp - dark society.mp3</a>
+        <!-- <span class="track-img"></span> -->
+    </li>
+
+    <li>
+        <a class="track" href="audio/Dr.Vamp - dark angels.mp3">Dr.Vamp - dark angels.mp3</a>
+        <!-- <span class="track-img"></span> -->
+    </li>
+    <li>
+        <div style="height:100px;width:100%;" class="canvas"></div>
+    </li>
+    <li>
+        <audio class="audio-player" id="audio" preload="auto" tabindex="0" controls="" type="audio/mpeg">
+        <source type="audio/mp3" src="audio/Dr.Vamp - west-side.mp3">
+        Sorry, your browser does not support HTML5 audio.
+    </audio>
+    </li>
 </ul>
 
-<audio id="audio" preload="auto" tabindex="0" controls="" type="audio/mpeg">
-    <source type="audio/mp3" src="audio/Dr.Vamp - west-side.mp3">
-    Sorry, your browser does not support HTML5 audio.
-</audio>
+    
