--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 
     <!-- App LESS -->
     <link href="css/app.less" type="text/css" rel="stylesheet/less">
+    <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+    <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
 </head>
-<body data-ng-app="Dktrvamp">
+<body data-ng-app="Dktrvamp" class="{{ context }}">
 
+    <data-nav-bar></data-nav-bar>
 	<div ui-view></div>
-	<data-nav-bar></data-nav-bar>
 	<!-- 3rd Party Libs -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
@@ -25,7 +28,9 @@
     
     <!-- Main App JS -->
     <script src="js/setup.js"></script>
+    <script src="partials/home.js"></script>
     <script src="directive/playlist/playlist.js"></script>
     <script src="directive/nav-bar/nav-bar.js"></script>
+    <script src="directive/bg-image.js"></script>
 </body>
 </html>
