--- a/directive/playlist/playlist.html
+++ b/directive/playlist/playlist.html
@@ -1,30 +1,25 @@
-<ul id="playlist">
-    <!-- <li class="active">
-        <a href="audio/Dr.Vamp - dark society.mp3">Dr.Vamp - dark society.mp3</a>
-    </li> -->
-    <li>
-        <a class="track" href="audio/Dr.Vamp - west-side.mp3">Dr.Vamp - west-side.mp3</a>
-        <!-- <span class="track-img"></span>         -->
-    </li>
+<div id="table-list">
+    <ul class="playlist" data-ng-repeat="track in tracks">
+        <li>
+            <i class="fa fa-music"></i>
+            <a class="track-name" data-ng-click="onPlayClicked($index)">{{track.name}}</a>
+            <i class="play-controls fa fa-pause" data-ng-click="onPauseClicked($index)"></i>
+            <i class="play-controls fa fa-play-circle-o" data-ng-click="onPlayClicked($index)"></i>
+            <i class="play-controls fa fa-cart-plus"></i>
+            <audio data-ng-src="{{track.src}}">Your Browser is not Compatible!</audio>
 
-    <li>
-        <a class="track" href="audio/Dr.Vamp - dark society.mp3">Dr.Vamp - dark society.mp3</a>
-        <!-- <span class="track-img"></span> -->
-    </li>
+        </li>
+    </ul>
+</div>  
 
-    <li>
-        <a class="track" href="audio/Dr.Vamp - dark angels.mp3">Dr.Vamp - dark angels.mp3</a>
-        <!-- <span class="track-img"></span> -->
-    </li>
-    <li>
-        <div style="height:100px;width:100%;" class="canvas"></div>
-    </li>
-    <li>
-        <audio class="audio-player" id="audio" preload="auto" tabindex="0" controls="" type="audio/mpeg">
-        <source type="audio/mp3" src="audio/Dr.Vamp - west-side.mp3">
-        Sorry, your browser does not support HTML5 audio.
-    </audio>
-    </li>
-</ul>
+<!-- 
+<span class="track-caption">
+                    <span data-ng-bind="track.genre"></span>
+                    <span data-ng-bind="track.bpm"></span>
+                    <span data-ng-bind="track.year"></span>
+                </span> -->
+
+
+
 
     
