--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <!-- App LESS -->
     <link href="css/app.less" type="text/css" rel="stylesheet/less">
     <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome.css" rel="stylesheet">
+    <!-- <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"> -->
+    <link href="bower_components/fontawesome/css/font-awesome.css" rel="stylesheet">
 </head>
 <body data-ng-app="Dktrvamp" class="{{ context }}">
 
     <data-nav-bar></data-nav-bar>
 	<div ui-view></div>
+    <div data-visual></div>
+
+    
 	<!-- 3rd Party Libs -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
@@ -29,8 +32,12 @@
     <!-- Main App JS -->
     <script src="js/setup.js"></script>
     <script src="partials/home.js"></script>
+    <script src="partials/audio.js"></script>
+    <script src="partials/social.js"></script>
+    <script src="modals/purchase-modal.js"></script>
     <script src="directive/playlist/playlist.js"></script>
     <script src="directive/nav-bar/nav-bar.js"></script>
-    <script src="directive/bg-image.js"></script>
+    <script src="directive/visual/visual.js"></script>
+    <script src="service/locale.js"></script>
 </body>
 </html>
