--- a/directive/nav-bar/nav-bar.html
+++ b/directive/nav-bar/nav-bar.html
@@ -1,6 +1,6 @@
 <!-- Navigation Bar -->
 
-<nav style="background:none;border:none;" class="navbar navbar-default pattern" role="navigation">
+<nav class="navbar navbar-default pattern" role="navigation">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
 
@@ -14,7 +14,7 @@
     
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" data-ng-class="!navCollapsed && 'in'" data-ng-click="navCollapsed = true">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav" data-ng-style="{ 'padding-left' : model.left }" >
             <li class="tab" data-ng-class="{active: $state.current.name === 'home'}" 
                 class="tab">
              <a data-ui-sref="home">Home</a>
