--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <link href="bower_components/fontawesome/css/font-awesome.css" rel="stylesheet">
 </head>
 <body data-ng-app="Dktrvamp" class="{{ context }}">
-
+  <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
     <div data-nav-bar></div>
 	<div ui-view></div>
     <!-- <div data-visual></div> -->
-
-    
 	<!-- 3rd Party Libs -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
@@ -27,8 +25,9 @@
     <script src="bower_components/ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/ngtweet/dist/ngtweet.min.js"></script>
     <!-- // <script src="bower_components/angular-hotkeys/hotkeys.js"></script> -->
-    
+
     <!-- Main App JS -->
     <script src="js/setup.js"></script>
     <script src="partials/home.js"></script>
