--- a/index.html
+++ b/index.html
@@ -28,18 +28,27 @@
     <script src="bower_components/ngtweet/dist/ngtweet.min.js"></script>
     <!-- // <script src="bower_components/angular-hotkeys/hotkeys.js"></script> -->
 
-    <!-- Main App JS -->
+
+    <!-- Setup -->
     <script src="js/setup.js"></script>
-    <script src="partials/home.js"></script>
-    <script src="partials/audio.js"></script>
-    <script src="partials/social.js"></script>
+
+    <!-- Servie -->
     <script src="modals/purchase-modal.js"></script>
+
+    <!-- Directive JS -->
+    <script src="directive/content/content.js"></script>
     <script src="directive/footer/home-footer.js"></script>
     <script src="directive/playlist/playlist.js"></script>
     <script src="directive/nav-bar/nav-bar.js"></script>
     <script src="directive/visual/visual.js"></script>
-    <script src="directive/slides/text-slide.js"></script>
     <script src="directive/instagram.js"></script>
+
+    <!-- Modals -->
     <script src="service/locale.js"></script>
+
+    <!-- Partial JS -->
+    <script src="partials/audio.js"></script>
+    <script src="partials/home.js"></script>
+    <script src="partials/social.js"></script>
 </body>
 </html>
