--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <!-- Servie -->
     <script src="modals/purchase-modal.js"></script>
+    <script src="service/utils.js"></script>
+    <script src="service/cache.js"></script>
+    <script src="service/artist-invoice.js"></script>
 
     <!-- Directive JS -->
     <script src="directive/content/content.js"></script>
