--- a/directive/playlist/playlist.html
+++ b/directive/playlist/playlist.html
@@ -1,14 +1,14 @@
 <div id="table-list">
-        <div id="mp3_player">
-            <div id="audio_box"></div>
-            <canvas class="canvas" id="analyser_render"></canvas>
-        </div>
-        <br>
-        <hr>
-        <button class="hide-btn btn btn-large" data-ng-click="show = !show"> {{ show ? "Hide" : "Show" }} </button>
-        <br>
-        <hr>
+    <div id="mp3_player">
+        <div id="audio_box"></div>
+        <canvas class="canvas" id="analyser_render"></canvas>
+    </div>
+    <button class="hide-btn btn btn-large"
+        data-ng-click="show = !show">
+        {{ show ? "Hide" : "Show" }}
+    </button>
     <div class="table-list" ng-init="show = true" data-ng-show="show">
+
         <ul class="playlist" data-ng-repeat="track in tracks">
             <li data-ng-class="{ 'active' : is_clicked } " data-ng-click="is_clicked = !is_clicked">
                 <i class="fa fa-music"></i>
