Added ng-sanitize for html parsing from son data. Changed styles for the uiview transition and other. Updated the personal portfolio son.

--- a/directive/artist-content/artist-content.html
+++ b/directive/artist-content/artist-content.html
@@ -3,9 +3,10 @@
         autofocus
         data-ng-model-options="{ debounce: 500 }"
         data-ng-model="model.artist"
-        class="form-control"
+        class="form-control  text-input"
         data-ng-change="searchArtist($event)">
 
+    <br>
     <!-- Spotify -->
     <div class="list-container" data-ng-repeat="item in model.items">
         <b class="text">Album:</b>
