--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/ngtweet/dist/ngtweet.min.js"></script>
+    <script src="/bower_components/angular-sanitize/angular-sanitize.js"></script>
     <!-- // <script src="bower_components/angular-hotkeys/hotkeys.js"></script> -->
 
 
