--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
     <link href="bower_components/fontawesome/css/font-awesome.css" rel="stylesheet">
 </head>
-<body data-ng-app="Dktrvamp" class="{{ context }}">
-    <div data-nav-bar></div>
+<body data-ng-app="Dktrvamp">
+    <div data-nav-bar id="NavBar"></div>
 
-    <div ui-view></div>
+    <div ui-view class="{{context}}"></div>
     <!-- FOOTER -->
     <div data-home-footer></div>
 
     <!-- <div data-visual></div> -->
-      <!-- <script src="http://localhost:35729/livereload.js" data-build="exclude"></script> -->
+      <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
 	<!-- 3rd Party Libs -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
@@ -51,7 +51,7 @@
     <script src="directive/instagram.js"></script>
     <script src="directive/nav-bar/nav-bar.js"></script>
     <script src="directive/playlist/playlist.js"></script>
-    <script src="directive/side-bar/side-bar.js"></script>
+    <script src="directive/vertical-menu/vertical-menu.js"></script>
     <script src="directive/visual/visual.js"></script>
 
     <!-- Modals -->
