--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     	<title>dktrvamp.com</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
+        <base href="/">
 
         <!-- App LESS -->
         <link href="css/app.less" type="text/css" rel="stylesheet/less">
