--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>dktrvamp.com</title>
-        <base href="/">
+    	<title>Dr.Vamp Audio</title>
+        <!-- <base href="/"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
 
