--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     	<title>Dr.Vamp Audio</title>
-        <!-- <base href="/"> -->
+        <base href="/">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
 
