Made additional improvements and updated the about view controller.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div ui-view class="{{context}}"></div>
             <!-- FOOTER -->
-            <div data-home-footer></div>
+
         </div>
 
         <!-- <div data-visual></div> -->
@@ -65,6 +65,7 @@
         <!-- Partial JS -->
         <script src="partials/artist/artist.js"></script>
         <script src="partials/audio.js"></script>
+        <script src="partials/about.js"></script>
         <script src="partials/home.js"></script>
         <script src="partials/social.js"></script>
         <script src="partials/main.js"></script>
