Added google analytics.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <script src="js/setup.js"></script>
 
         <!-- Service -->
+        <script src="service/analytics.js"></script>
         <script src="service/artist-invoice.js"></script>
         <script src="service/cache.js"></script>
         <script src="service/locale.js"></script>
@@ -69,5 +70,8 @@
         <script src="partials/home.js"></script>
         <script src="partials/social.js"></script>
         <script src="partials/main.js"></script>
+
+        <!-- Analytics -->
+        <script src="libs/analytics.js"></script>
     </body>
 </html>
