Added directive to track click events.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <script src="directive/playlist/playlist.js"></script>
         <script src="directive/vertical-menu/vertical-menu.js"></script>
         <script src="directive/visual/visual.js"></script>
+        <script src="directive/ng-click.js"></script>
 
         <!-- Modals -->
         <script src="modals/gear.js"></script>
