--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- <div data-visual></div> -->
-          <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
+          <!-- <script src="http://localhost:35729/livereload.js" data-build="exclude"></script> -->
     	<!-- 3rd Party Libs -->
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
