--- a/directive/playlist/playlist.html
+++ b/directive/playlist/playlist.html
@@ -15,14 +15,14 @@
                 <a class="track-name"
                     data-ng-click="onPlayClicked($index)">{{track.name}}
                 </a>
-                <i class="play-controls fa fa-pause"
+                <!-- <i class="play-controls fa fa-pause"
                     data-ng-click="onPauseClicked($index)">
                 </i>
                 <i class="play-controls fa
                         fa-play-circle-o"
                     data-ng-click="onPlayClicked($index)">
                 </i>
-                <i class="play-controls fa fa-cart-plus"></i>
+                <i class="play-controls fa fa-cart-plus"></i> -->
             </li>
         </ul>
     </div>
