--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         <script src="directive/vertical-menu/vertical-menu.js"></script>
         <script src="directive/visual/visual.js"></script>
         <script src="directive/ng-click.js"></script>
+        <script src="directive/twitter/twitter-feed.js"></script>
+        <script src="directive/soundcloud/soundcloud-new-track.js"></script>
 
         <!-- Modals -->
         <script src="modals/gear.js"></script>
@@ -67,6 +69,7 @@
         <!-- Partial JS -->
         <script src="partials/artist/artist.js"></script>
         <script src="partials/audio.js"></script>
+        <script src="partials/contact.js"></script>
         <script src="partials/about.js"></script>
         <script src="partials/home.js"></script>
         <script src="partials/social.js"></script>
