Added library to enable desktop mode on mobile devices.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <script src="partials/main.js"></script>
 
         <!-- Analytics -->
+        <script src="libs/desktop-view-switch.js"></script>
         <script src="libs/analytics.js"></script>
     </body>
 </html>
