--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div id="Main" data-ng-controller="MainCtrl" class="{{ context }}">
             <div data-nav-bar id="NavBar"></div>
 
-            <div ui-view class="fade-in fade-out {{context}}"></div>
+            <div data-ui-view class="fade-in fade-out {{context}}"></div>
             <!-- FOOTER -->
-
+            <div data-home-footer></div>
         </div>
 
         <!-- <div data-visual></div> -->
-          <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
+          <!-- <script src="http://localhost:35729/livereload.js" data-build="exclude"></script> -->
     	<!-- 3rd Party Libs -->
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
