--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body data-ng-app="Dktrvamp">
         <div id="Main" data-ng-controller="MainCtrl" class="{{ context }}">
-            <div data-nav-bar id="NavBar"></div>
+            <div data-nav-bar></div>
 
             <div data-ui-view class="fade-in fade-out {{context}}"></div>
             <!-- FOOTER -->
