Added the confirmation for the user contact form.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- <div data-visual></div> -->
-          <!-- <script src="http://localhost:35729/livereload.js" data-build="exclude"></script> -->
+          <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
     	<!-- 3rd Party Libs -->
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
@@ -42,6 +42,7 @@
 
         <!-- Service -->
         <script src="service/analytics.js"></script>
+        <script src="service/contact.js"></script>
         <script src="service/artist-invoice.js"></script>
         <script src="service/cache.js"></script>
         <script src="service/locale.js"></script>
@@ -63,6 +64,7 @@
 
         <!-- Modals -->
         <script src="modals/gear.js"></script>
+        <script src="modals/confirmation.js"></script>
         <script src="modals/purchase-modal.js"></script>
 
 
