Made additional style changes to improve user experience.

--- a/directive/footer/home-footer.html
+++ b/directive/footer/home-footer.html
@@ -1,17 +1,12 @@
 <footer class="footer">
-	<!-- Footer Links -->
-	<a class="footer-links" href=""
-		data-ng-repeat="link in links"
-		popover-title="{{ link.name }}"
-		popover="{{ link.content }}"
-		popover-placement="top"
-		popover-trigger="click"
-		data-ui-state="link.to_state || 'home'">
-		<i class="fa fa-square"></i>
-		&nbsp;&nbsp;&nbsp;
-		<span data-ng-bind="link.name"></span>
-		&nbsp;&nbsp;&nbsp;
-	</a>
+	<button class="nav-button"
+		data-ng-repeat="item in items"
+		data-ui-state="item.to_state || 'home'"
+        data-ui-state="item.state || ''"
+        data-ui-sref-active="active"
+        data-ng-bind="::item.title">
+    </button>
+	<!-- Footer items -->
 
 	<img class="footer-wave-image" src="images/hip-hop-2014.png" width="80px" height="30px;">
 </footer>
