--- a/directive/nav-bar/nav-bar.html
+++ b/directive/nav-bar/nav-bar.html
@@ -1,5 +1,5 @@
 <div id="NavBar">
-    <button class="menu-tab"
+    <button class="menu-tab nav-button"
         data-ng-repeat="item in menu_bar"
         data-ng-attr-tabindex="{{item.index}}"
         data-ng-keyup="onKeyUp($event)"
