Added modal styles.

--- a/modals/confirmation.html
+++ b/modals/confirmation.html
@@ -3,7 +3,10 @@
     <br>
     <h4>Your Email:  <a href="#"> {{$parent.model.email}}</a></h4>
     <br>
-    <h5>Thank You,  {{$parent.model.name}}</h5>
+    <h5>Thank You,  <b>{{$parent.model.name}}</b></h5>
     <br>
     <h5>Have a nice day!</h5>
+    <br>
+    <hr>
+    <button class="nav-button active" data-ui-sref="home">Home Page</button>
 </div>
