Made additional improvements for the asynchronous calls on the contact send email. Display a loading view until we receive a response.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <script src="directive/footer/home-footer.js"></script>
         <script src="directive/instagram.js"></script>
         <script src="directive/nav-bar/nav-bar.js"></script>
+        <script src="directive/overlay/loading.js"></script>
         <script src="directive/playlist/playlist.js"></script>
         <script src="directive/vertical-menu/vertical-menu.js"></script>
         <script src="directive/visual/visual.js"></script>
