--- a/directive/instagram.html
+++ b/directive/instagram.html
@@ -2,7 +2,7 @@
 	id="Artist"
 	data-ng-class="{ 'slide-side' : model.should_slide }"
 	>
-	<div data-ng-if="model.artist_caption_text" class="insta-caption">
+	<!-- <div data-ng-if="model.artist_caption_text" class="insta-caption">
 		<span class="insta-text" data-ng-bind="model.artist_caption_text.caption.text"></span>
 		<img data-ng-src="{{model.artist_caption_text.user.profile_picture}}">
 		<span class="username" data-ng-bind="'@' + model.artist_caption_text.user.username"></span>
@@ -22,5 +22,5 @@
 			</video>
 
 		</li>
-	</ul>
+	</ul> -->
 </div>
