Additional improvements on the gear slide.

--- a/directive/gear/gear.html
+++ b/directive/gear/gear.html
@@ -1,5 +1,5 @@
 <div id="Slide">
-    <div class="studio-gear fade-in fade-out" data-ng-show="model.should_display"
+    <div class="studio-gear fade-in fade-out" data-ng-if="model.should_display"
         data-ng-swipe-left="onButtonClicked('left')"
         data-ng-swipe-right="onButtonClicked('right')">
         <button data-ng-click="onButtonClicked('left')"
