--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
         <!-- App LESS -->
         <link href="css/app.less" type="text/css" rel="stylesheet/less">
-        <link href="bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-        <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
-        <link href="bower_components/fontawesome/css/font-awesome.css" rel="stylesheet">
+        <link href="bower_components/bootstrap/dist/css/bootstrap.css" type="text/css" rel="stylesheet">
+        <link href="bower_components/bootstrap/dist/css/bootstrap-theme.css" type="text/css" rel="stylesheet">
+        <link href="bower_components/fontawesome/css/font-awesome.css" type="text/css" rel="stylesheet">
     </head>
     <body data-ng-app="Dktrvamp">
         <div id="Main" data-ng-controller="MainCtrl"
@@ -25,7 +25,7 @@
         </div>
 
         <!-- <div data-visual></div> -->
-          <script src="http://localhost:35729/livereload.js" data-build="exclude"></script>
+          <!-- <script src="http://localhost:35729/livereload.js" data-build="exclude"></script> -->
     	<!-- 3rd Party Libs -->
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/less/dist/less.js" data-build="exclude"></script>
