--- a/directive/gear/gear.html
+++ b/directive/gear/gear.html
@@ -5,7 +5,7 @@
         <button data-ng-click="onButtonClicked('left')"
             class="direction fa fa-arrow-left">
         </button>
-        <div class="content">
+        <div class="content"  data-ng-if="model.should_display">
             <img data-ng-src="{{model.item.image}}" class="gear-image">
             <div class="text">
                 <h5 class="item-title" data-ng-bind-html="model.item.title"></h5>
