Fixed google analytics.

--- a/directive/nav-bar/nav-bar.html
+++ b/directive/nav-bar/nav-bar.html
@@ -6,6 +6,7 @@
         data-focus-if="is_current_state"
         data-ui-state="item.state || ''"
         data-ui-sref-active="active"
+        data-ng-click=""
         data-ng-bind="::item.title">
     </button>
 </div>
