Fixed google analytics tracking and initialize it only once at start up.

--- a/directive/footer/home-footer.html
+++ b/directive/footer/home-footer.html
@@ -4,6 +4,7 @@
 		data-ui-state="item.to_state || 'home'"
         data-ui-state="item.state || ''"
         data-ui-sref-active="active"
+        data-ng-click=""
         data-ng-bind="::item.title">
     </button>
 	<!-- Footer items -->
