Added rss feed from http://www.youredm.com/feed/.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <script src="service/artist-invoice.js"></script>
         <script src="service/cache.js"></script>
         <script src="service/locale.js"></script>
-        <script src="service/locale.js"></script>
+        <script src="service/rssFeed.js"></script>
         <script src="service/utils.js"></script>
 
         <!-- Directive JS -->
@@ -62,6 +62,7 @@
         <script src="directive/nav-bar/nav-bar.js"></script>
         <script src="directive/overlay/loading.js"></script>
         <script src="directive/playlist/playlist.js"></script>
+        <script src="directive/rss-feed/rss-feed.js"></script>
         <script src="directive/vertical-menu/vertical-menu.js"></script>
         <script src="directive/visual/visual.js"></script>
         <script src="directive/ng-click.js"></script>
