--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
     	<title>Dr.Vamp Audio</title>
         <!-- <base href="/"> -->
+        <base url="http://www.drvaudio.com">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
 
