added ability to identify if the device is either mobile or desktop.

--- a/directive/rss-feed/rss-feed.html
+++ b/directive/rss-feed/rss-feed.html
@@ -1,4 +1,5 @@
-<div id="RssFeed" data-ng-if="model.feed">
+<div id="RssFeed" data-ng-if="model.feed"
+    data-ng-class="model.is_mobile ? 'mobile' : ''">
     <button data-ng-click="onButtonClicked('left')"
         class="direction fa fa-arrow-left">
     </button>
